build: prevent make errors for picky makes when $(EXTRA_ALL_TARGETS) is empty
picky make implementations don't like lines with only tabs in rules or dependencie

Michael
(cherry picked from commit 058d1e2d0a4985825a62d2adc336a48d91ae4771)

--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -226,7 +226,9 @@ MODULES = $(VFS_MODULES) $(PDB_MODULES) $(RPC_MODULES) $(IDMAP_MODULES) \
           $(CHARSET_MODULES) $(AUTH_MODULES) $(NSS_INFO_MODULES) \
 	  $(GPEXT_MODULES)
 
-######################################################################
+EXTRA_ALL_TARGETS = @EXTRA_ALL_TARGETS@
+
+#####################################################################
 # object file lists
 ######################################################################
 
@@ -1132,7 +1134,7 @@ RPC_OPEN_TCP_OBJ = torture/rpc_open_tcp.o \
 ######################################################################
 all:: SHOWFLAGS libs $(SBIN_PROGS) $(BIN_PROGS) $(ROOT_SBIN_PROGS) \
 	$(MODULES) $(NSS_MODULES) $(PAM_MODULES) @CIFSUPCALL_PROGS@ \
-	@EXTRA_ALL_TARGETS@
+	$(EXTRA_ALL_TARGETS)
 
 nss_modules:: $(NSS_MODULES)
 
