[s3]build: build cifs.upcall at build time instead of at install time.
This is to prevent problems with packaging scripts that pass CFLAGS
to make but not to make install...

Based on a patch for v3-2 by Martin Schwenke <martin@meltin.net>.

Michael

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -1158,7 +1158,8 @@ RPC_OPEN_TCP_OBJ = torture/rpc_open_tcp.o \
 # now the rules...
 ######################################################################
 all:: SHOWFLAGS basics libs $(SBIN_PROGS) $(BIN_PROGS) $(ROOT_SBIN_PROGS) \
-	$(MODULES) $(NSS_MODULES) $(PAM_MODULES) @EXTRA_ALL_TARGETS@
+	$(MODULES) $(NSS_MODULES) $(PAM_MODULES) @CIFSUPCALL_PROGS@ \
+	@EXTRA_ALL_TARGETS@
 
 basics::
 
