--- a/configure.in
+++ b/configure.in
@@ -86,10 +86,9 @@ rk_TEST_PACKAGE(sqlite3,
 #endif],
 [-lsqlite3],,,SQLITE3)
 
-if test "X$with_sqlite3" != Xno ; then
+if test "X$with_sqlite3" != Xyes ; then
    INCLUDE_sqlite3="-I\$(top_srcdir)/lib/sqlite"
    LIB_sqlite3="\$(top_builddir)/lib/sqlite/libheimsqlite.la"
-   with_sqlite3=yes
 fi
 AM_CONDITIONAL(SQLITE3,  test "X$with_sqlite3" = Xyes)
 
