--- a/lib/hdb/Makefile.am
+++ b/lib/hdb/Makefile.am
@@ -4,6 +4,7 @@ include $(top_srcdir)/Makefile.am.common
 
 AM_CPPFLAGS += -I../asn1 -I$(srcdir)/../asn1 $(INCLUDE_hcrypto)
 AM_CPPFLAGS += $(INCLUDE_openldap) -DHDB_DB_DIR=\"$(DIR_hdbdir)\"
+AM_CPPFLAGS += -I$(srcdir)/../krb5
 
 BUILT_SOURCES = \
 	$(gen_files_hdb:.x=.c)	\
