--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -2791,7 +2791,7 @@ etags::
 	etags --append `find $(srcdir)/../source4/dsdb -name "*.[ch]"`
 
 ctags::
-	ctags `find $(srcdir)/.. -name "*.[ch]"`
+	ctags `find $(srcdir)/.. -name "*.[ch]" | grep -v include/proto\.h`
 
 realclean:: clean
 	-rm -f config.log bin/.dummy script/findsmb script/gen-8bit-gap.sh
