s3-build: do not auto-genereate ndr tables but use checked-in tables.
This removes the build-dependency on perl that was introduced in
commit e0905c30908b4d621030689d33de28a13c04a690.

The tables can now be re-built with "make ndr-tables".
This is also called by make samba3-idl to ensure that the tables
are updated after idl changes.

This hopefully fixes the build on some build farm hosts (e.g. gwen).

Michael

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -1235,10 +1235,13 @@ samba3-idl::
 		../librpc/idl/ntsvcs.idl librpc/idl/libnetapi.idl ../librpc/idl/drsuapi.idl \
 		../librpc/idl/drsblobs.idl ../librpc/idl/nbt.idl \
 		../librpc/idl/named_pipe_auth.idl librpc/idl/dom_sid.idl
+	@$(MAKE) ndr-tables
 
-librpc/gen_ndr/tables.c:: librpc/gen_ndr/*.h
-	@echo "Generating $@"
-	@$(PERL) ../librpc/tables.pl $^ > $@
+NDR_TABLES = librpc/gen_ndr/tables.c
+
+ndr-tables:: librpc/gen_ndr/*.h
+	@echo "Generating $(NDR_TABLES)"
+	@$(PERL) ../librpc/tables.pl $^ > $(NDR_TABLES)
 
 #####################################################################
 
