s3 build: when detecting to use internal zlib, put "-I../lib/zlib" first in CFLAGS
This should fix a build error on our Tru64 build farm box where a zlib.h is
found in an include path handed in via external CFLAGS, but that zlib.h belongs
to an old zlib. So in ndr_compression.c, "#include <zlib.h>" includes the wrong
header for the internal zlib.

Michael

--- a/source3/configure.in
+++ b/source3/configure.in
@@ -6256,7 +6256,7 @@ AC_ZLIB([ZLIB_OBJS=""], [
 	do
 		ZLIB_OBJS="$ZLIB_OBJS ../lib/zlib/$o"
 	done
-	CFLAGS="$CFLAGS -I../lib/zlib"
+	CFLAGS="-I../lib/zlib $CFLAGS"
 ])
 
 dnl Remove -L/usr/lib/? from LDFLAGS and LIBS
