--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -1036,6 +1036,7 @@ IDMAP_ADEX_OBJ = \
 
 WINBINDD_OBJ1 = \
 		winbindd/winbindd.o       \
+		winbindd/winbindd_reqtrans.o \
 		winbindd/winbindd_user.o  \
 		winbindd/winbindd_group.o \
 		winbindd/winbindd_util.o  \
