--- a/lib/hx509/test_nist2.in
+++ b/lib/hx509/test_nist2.in
@@ -38,6 +38,7 @@ srcdir="@srcdir@"
 objdir="@objdir@"
 nistdir=${objdir}/PKITS_data
 nistzip=${srcdir}/data/PKITS_data.zip
+egrep="@egrep@"
 
 limit="${1:-nolimit}"
 
@@ -96,7 +97,6 @@ while read result cert other ; do
     args="$args cert:FILE:$nistdir/certs/$cert"
     args="$args chain:DIR:$nistdir/certs"
     args="$args anchor:FILE:$nistdir/certs/TrustAnchorRootCertificate.crt"
-#    args="$args crl:FILE:$nistdir/crls/TrustAnchorRootCRL.crl"
 
     for a in $nistdir/crls/*.crl; do
 	args="$args crl:FILE:$a"
@@ -113,12 +113,14 @@ while read result cert other ; do
     [123],*) r="PASSf";;
     *) echo="unknown result ${result},${res}" ; exit 1 ;;
     esac
-    if grep "${name} FAIL" $srcdir/data/nist-result2 > /dev/null; then
+    if ${egrep} "^${name} FAIL" $srcdir/data/nist-result2 > /dev/null; then
 	if expr "$r" : "PASS" >/dev/null; then
 	    echo "${name} passed when expected not to"
 	    echo "# ${description}" > nist2-passed-${name}.tmp
 	    ec=1
 	fi
+    elif ${egrep} "^${name} EITHER" $srcdir/data/nist-result2 > /dev/null; then
+	:
     elif expr "$r" : "FAIL.*" >/dev/null ; then
 	echo "$r ${name} ${description}"
 	echo "# ${description}" > nist2-failed-${name}.tmp
