kill kdc using leaks-kill
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@24160 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/tests/kdc/check-kdc.in
+++ b/tests/kdc/check-kdc.in
@@ -419,7 +419,7 @@ ${kdestroy}
 
 
 echo "killing kdc (${kdcpid})"
-kill $kdcpid || exit 1
+sh ${srcdir}/leaks-kill.sh kdc $kdcpid || exit 1
 
 trap "" EXIT
 
