remove leaks-log
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@24164 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/tests/kdc/Makefile.am
+++ b/tests/kdc/Makefile.am
@@ -155,6 +155,7 @@ CLEANFILES= \
 	krb5-pkinit.conf \
 	krb5-pkinit-win.conf \
 	signal \
+	leaks-log \
 	messages.log \
 	o2cache.krb5 \
 	o2digest-reply \
