use leaks-kill.sh
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@24165 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/tests/kdc/check-des.in
+++ b/tests/kdc/check-des.in
@@ -137,7 +137,7 @@ ${klist} -v | grep des-cbc-crc > /dev/null || { ec=1 ; eval "${testfailed}"; }
 ${kdestroy}
 
 echo "killing kdc (${kdcpid})"
-kill $kdcpid || exit 1
+sh ${srcdir}/leaks-kill.sh kdc $kdcpid || exit 1
 
 trap "" EXIT
 
