--- a/tests/kdc/check-pkinit.in
+++ b/tests/kdc/check-pkinit.in
@@ -266,7 +266,7 @@ fi
 
 
 echo "killing kdc (${kdcpid})"
-kill $kdcpid || exit 1
+sh ${srcdir}/leaks-kill.sh kdc $kdcpid || exit 1
 
 trap "" EXIT
 
