--- a/tests/kdc/check-kpasswdd.in
+++ b/tests/kdc/check-kpasswdd.in
@@ -155,7 +155,8 @@ ${kdestroy}
 
 
 echo "killing kdc (${kdcpid} ${kpasswddpid})"
-kill $kdcpid $kpasswddpid || exit 1
+sh ${srcdir}/leaks-kill.sh kdc $kdcpid || exit 1
+sh ${srcdir}/leaks-kill.sh kpasswdd $kpasswddpid || exit 1
 
 trap "" EXIT
 
