clean up from others before trying to run this
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@24172 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/tests/kdc/check-cc.in
+++ b/tests/kdc/check-cc.in
@@ -111,6 +111,10 @@ ec=0
  echo '' ) 					\
     > ${objdir}/krb5-cc.conf
 
+${kswitch} -p foo@${R} 2>/dev/null && ../../kuser/kdestroy
+${kswitch} -p foo@${R} 2>/dev/null && ../../kuser/kdestroy
+${kswitch} -p bar@${R} 2>/dev/null && ../../kuser/kdestroy
+${kswitch} -p bar@${R} 2>/dev/null && ../../kuser/kdestroy
 
 echo "getting default tickets"; > messages.log
 ${kinit} foo@${R} || { ec=1 ; eval "${testfailed}"; }
