nsswitch: Move source3 files to top level dir.
Don't move source4 files yet to not confuse git's rename tracking too much.

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,8 @@ examples/VFS/skel_transparent.so
 *.po
 *.pyc
 semantic.cache
+nsswitch/libnss_winbind.so
+nsswitch/libnss_wins.so
 source3/bin/*
 source3/config.cache
 source3/config.log
