--- a/source3/configure.in
+++ b/source3/configure.in
@@ -5699,8 +5699,8 @@ HAVE_WINBIND=yes
 # Define the winbind shared library name and any specific linker flags
 # it needs to be built with.
 
-WINBIND_NSS="nsswitch/libnss_winbind.$SHLIBEXT"
-WINBIND_WINS_NSS="nsswitch/libnss_wins.$SHLIBEXT"
+WINBIND_NSS="../nsswitch/libnss_winbind.$SHLIBEXT"
+WINBIND_WINS_NSS="../nsswitch/libnss_wins.$SHLIBEXT"
 WINBIND_NSS_LDSHFLAGS=$LDSHFLAGS
 NSSSONAMEVERSIONSUFFIX=""
 WINBIND_NSS_PTHREAD=""
@@ -5708,16 +5708,16 @@ WINBIND_NSS_PTHREAD=""
 case "$host_os" in
 	*linux*)
 		NSSSONAMEVERSIONSUFFIX=".2"
-		WINBIND_NSS_EXTRA_OBJS="nsswitch/winbind_nss_linux.o"
+		WINBIND_NSS_EXTRA_OBJS="../nsswitch/winbind_nss_linux.o"
 		;;
 	*freebsd[[5-9]]*)
 		# FreeBSD winbind client is implemented as a wrapper around
 		# the Linux version.
 		NSSSONAMEVERSIONSUFFIX=".1"
-		WINBIND_NSS_EXTRA_OBJS="nsswitch/winbind_nss_freebsd.o \
-		    nsswitch/winbind_nss_linux.o"
-		WINBIND_NSS="nsswitch/nss_winbind.$SHLIBEXT"
-		WINBIND_WINS_NSS="nsswitch/nss_wins.$SHLIBEXT"
+		WINBIND_NSS_EXTRA_OBJS="../nsswitch/winbind_nss_freebsd.o \
+		    ../nsswitch/winbind_nss_linux.o"
+		WINBIND_NSS="../nsswitch/nss_winbind.$SHLIBEXT"
+		WINBIND_WINS_NSS="../nsswitch/nss_wins.$SHLIBEXT"
 		;;
 
 	*netbsd*[[3-9]]*)
@@ -5727,10 +5727,10 @@ case "$host_os" in
 		#
 		if test x"$ac_cv_func_getpwent_r" = x"yes"; then
 			WINBIND_NSS_EXTRA_OBJS="\
-			    nsswitch/winbind_nss_netbsd.o \
-			    nsswitch/winbind_nss_linux.o"
-			WINBIND_NSS="nsswitch/nss_winbind.$SHLIBEXT"
-			WINBIND_WINS_NSS="nsswitch/nss_wins.$SHLIBEXT"
+			    ../nsswitch/winbind_nss_netbsd.o \
+			    ../nsswitch/winbind_nss_linux.o"
+			WINBIND_NSS="../nsswitch/nss_winbind.$SHLIBEXT"
+			WINBIND_WINS_NSS="../nsswitch/nss_wins.$SHLIBEXT"
 		else
 			HAVE_WINBIND=no
 			winbind_no_reason=", getpwent_r is missing on $host_os so winbind is unsupported"
@@ -5738,28 +5738,28 @@ case "$host_os" in
 		;;
 	*irix*)
 		# IRIX has differently named shared libraries
-		WINBIND_NSS_EXTRA_OBJS="nsswitch/winbind_nss_irix.o"
-		WINBIND_NSS="nsswitch/libns_winbind.$SHLIBEXT"
-		WINBIND_WINS_NSS="nsswitch/libns_wins.$SHLIBEXT"
+		WINBIND_NSS_EXTRA_OBJS="../nsswitch/winbind_nss_irix.o"
+		WINBIND_NSS="../nsswitch/libns_winbind.$SHLIBEXT"
+		WINBIND_WINS_NSS="../nsswitch/libns_wins.$SHLIBEXT"
 		;;
 	*solaris*)
 		# Solaris winbind client is implemented as a wrapper around
 		# the Linux version.
 		NSSSONAMEVERSIONSUFFIX=".1"
-		WINBIND_NSS_EXTRA_OBJS="nsswitch/winbind_nss_solaris.o \
-		    nsswitch/winbind_nss_linux.o"
+		WINBIND_NSS_EXTRA_OBJS="../nsswitch/winbind_nss_solaris.o \
+		    ../nsswitch/winbind_nss_linux.o"
 		WINBIND_NSS_EXTRA_LIBS="${LIBREPLACE_NETWORK_LIBS}"
 		PAM_WINBIND_EXTRA_LIBS="${LIBREPLACE_NETWORK_LIBS}"
 		;;
 	*hpux11*)
-		WINBIND_NSS_EXTRA_OBJS="nsswitch/winbind_nss_solaris.o"
+		WINBIND_NSS_EXTRA_OBJS="../nsswitch/winbind_nss_solaris.o"
 		;;
 	*aix*)
 		# AIX has even differently named shared libraries.  No
 		# WINS support has been implemented yet.
-		WINBIND_NSS_EXTRA_OBJS="nsswitch/winbind_nss_aix.o"
+		WINBIND_NSS_EXTRA_OBJS="../nsswitch/winbind_nss_aix.o"
 		WINBIND_NSS_LDSHFLAGS="-Wl,-bexpall,-bM:SRE,-ewb_aix_init"
-		WINBIND_NSS="nsswitch/WINBIND"
+		WINBIND_NSS="../nsswitch/WINBIND"
 		WINBIND_WINS_NSS=""
 		;;
 	*)
