Ignore setup symlink.

--- a/.gitignore
+++ b/.gitignore
@@ -311,3 +311,4 @@ source3/librpc/gen_ndr/cli_drsblobs.c
 source3/librpc/gen_ndr/cli_drsblobs.h
 source3/librpc/gen_ndr/srv_drsblobs.c
 source3/librpc/gen_ndr/srv_drsblobs.h
+source3/setup
