--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -1237,7 +1237,7 @@ samba3-idl::
 		../librpc/idl/security.idl ../librpc/idl/dssetup.idl ../librpc/idl/krb5pac.idl \
 		../librpc/idl/ntsvcs.idl librpc/idl/libnetapi.idl ../librpc/idl/drsuapi.idl \
 		../librpc/idl/drsblobs.idl ../librpc/idl/nbt.idl \
-		../librpc/idl/named_pipe_auth.idl librpc/idl/dom_sid.idl
+		../librpc/idl/named_pipe_auth.idl 
 	@$(MAKE) ndr-tables
 
 NDR_TABLES = librpc/gen_ndr/tables.c
