Ignore generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -314,3 +314,36 @@ librpc/gen_ndr/cli_drsblobs.h
 librpc/gen_ndr/srv_drsblobs.c
 librpc/gen_ndr/srv_drsblobs.h
 source3/setup
+librpc/gen_ndr/*wzcsvc*
+librpc/gen_ndr/*w32time*
+librpc/gen_ndr/*wmi*
+librpc/gen_ndr/*trkwks*
+librpc/gen_ndr/*spoolss*
+librpc/gen_ndr/*rot*
+librpc/gen_ndr/*remact*
+librpc/gen_ndr/*oxidresolver*
+librpc/gen_ndr/*msgsvc*
+librpc/gen_ndr/*mgmt*
+librpc/gen_ndr/*keysvc*
+librpc/gen_ndr/*protected_storage*
+librpc/gen_ndr/*dnsserver*
+librpc/gen_ndr/*scerpc*
+librpc/gen_ndr/*policyagent*
+librpc/gen_ndr/*scerpc*
+librpc/gen_ndr/*orpc*
+librpc/gen_ndr/*efs*
+librpc/gen_ndr/*dsbackup*
+librpc/gen_ndr/*frsrpc*
+librpc/gen_ndr/*dcom*
+librpc/gen_ndr/*frsapi*
+librpc/gen_ndr/*dbgidl*
+librpc/gen_ndr/*browser*
+librpc/gen_ndr/*atsvc*
+librpc/gen_ndr/*audiosrv*
+librpc/gen_ndr/*unixinfo*
+librpc/gen_ndr/py_*
+librpc/gen_ndr/*_c.c
+librpc/gen_ndr/*_c.h
+librpc/gen_ndr/*_s.c
+librpc/gen_ndr/cli_named_pipe_auth.[ch]
+librpc/gen_ndr/srv_named_pipe_auth.[ch]
