s4:lib/tevent: add lib/events/ compat and let things compile
metze

--- a/lib/tevent/tevent.pc.in
+++ b/lib/tevent/tevent.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: events
 Description: An event system library
 Version: @PACKAGE_VERSION@
-Libs: -L${libdir} -levents
+Libs: -L${libdir} -ltevent
 Cflags: -I${includedir} 
 URL: http://samba.org/
