--- a/lib/tevent/Makefile.in
+++ b/lib/tevent/Makefile.in
@@ -29,41 +29,41 @@ PYTHON_BUILD_TARGET = @PYTHON_BUILD_TARGET@
 PYTHON_INSTALL_TARGET = @PYTHON_INSTALL_TARGET@
 PYTHON_CHECK_TARGET = @PYTHON_CHECK_TARGET@
 LIB_PATH_VAR = @LIB_PATH_VAR@
-eventsdir = @eventsdir@
+teventdir = @teventdir@
 
 TALLOC_CFLAGS = @TALLOC_CFLAGS@
 TALLOC_LDFLAGS = @TALLOC_CFLAGS@
 TALLOC_LIBS = @TALLOC_LIBS@
 
-EVENTS_CFLAGS = @EVENTS_CFLAGS@
-EVENTS_LDFLAGS = @EVENTS_CFLAGS@
-EVENTS_LIBS = @EVENTS_LIBS@
+TEVENT_CFLAGS = @TEVENT_CFLAGS@
+TEVENT_LDFLAGS = @TEVENT_CFLAGS@
+TEVENT_LIBS = @TEVENT_LIBS@
 
-CFLAGS = $(CPPFLAGS) $(TALLOC_CFLAGS) $(EVENTS_CFLAGS) @CFLAGS@
-LDFLAGS = $(TALLOC_LDFLAGS) $(EVENTS_LDFLAGS) @LDFLAGS@
-LIBS = $(TALLOC_LIBS) $(EVENTS_LIBS) @LIBS@
+CFLAGS = $(CPPFLAGS) $(TALLOC_CFLAGS) $(TEVENT_CFLAGS) @CFLAGS@
+LDFLAGS = $(TALLOC_LDFLAGS) $(TEVENT_LDFLAGS) @LDFLAGS@
+LIBS = $(TALLOC_LIBS) $(TEVENT_LIBS) @LIBS@
 
-EVENTS_OBJ = @EVENTS_OBJ@ @LIBREPLACEOBJ@
+TEVENT_OBJ = @TEVENT_OBJ@ @LIBREPLACEOBJ@
 
 default: all
 
-include $(eventsdir)/events.mk
-include $(eventsdir)/rules.mk
+include $(teventdir)/tevent.mk
+include $(teventdir)/rules.mk
 
-all:: showflags dirs $(PROGS) $(EVENTS_SOLIB) libevents.a $(PYTHON_BUILD_TARGET)
+all:: showflags dirs $(PROGS) $(TEVENT_SOLIB) libtevent.a $(PYTHON_BUILD_TARGET)
 
 install:: all
-$(EVENTS_SOLIB): $(EVENTS_OBJ)
-	$(SHLD) $(SHLD_FLAGS) $(LDFLAGS) $(LIBS) -o $@ $(EVENTS_OBJ) @SONAMEFLAG@$(EVENTS_SONAME)
+$(TEVENT_SOLIB): $(TEVENT_OBJ)
+	$(SHLD) $(SHLD_FLAGS) $(LDFLAGS) $(LIBS) -o $@ $(TEVENT_OBJ) @SONAMEFLAG@$(TEVENT_SONAME)
 
 shared-build: all
 	${INSTALLCMD} -d $(sharedbuilddir)/lib
-	${INSTALLCMD} -m 644 libevents.a $(sharedbuilddir)/lib
-	${INSTALLCMD} -m 755 $(EVENTS_SOLIB) $(sharedbuilddir)/lib
-	ln -sf $(EVENTS_SOLIB) $(sharedbuilddir)/lib/$(EVENTS_SONAME)
-	ln -sf $(EVENTS_SOLIB) $(sharedbuilddir)/lib/libevents.so
+	${INSTALLCMD} -m 644 libtevent.a $(sharedbuilddir)/lib
+	${INSTALLCMD} -m 755 $(TEVENT_SOLIB) $(sharedbuilddir)/lib
+	ln -sf $(TEVENT_SOLIB) $(sharedbuilddir)/lib/$(TEVENT_SONAME)
+	ln -sf $(TEVENT_SOLIB) $(sharedbuilddir)/lib/libtevent.so
 	${INSTALLCMD} -d $(sharedbuilddir)/include
-	${INSTALLCMD} -m 644 $(srcdir)/events.h $(sharedbuilddir)/include
+	${INSTALLCMD} -m 644 $(srcdir)/tevent.h $(sharedbuilddir)/include
 
 check: test
 
