--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ librpc/gen_ndr/*_s.c
 librpc/gen_ndr/cli_named_pipe_auth.[ch]
 librpc/gen_ndr/srv_named_pipe_auth.[ch]
 lib/tevent/Makefile
+lib/tevent/tevent.so
+lib/tevent/libtevent.so*
+lib/tevent/libtevent.a
