--- a/ctdb/packaging/RPM/ctdb.spec.in
+++ b/ctdb/packaging/RPM/ctdb.spec.in
@@ -97,6 +97,7 @@ CFLAGS="$RPM_OPT_FLAGS $EXTRA -D_GNU_SOURCE" ./buildtools/bin/waf configure \
 	--prefix=%{_prefix} \
 	--includedir=%{_includedir}/ctdb \
 	--libdir=%{_libdir} \
+	--libexecdir=%{_libexecdir} \
 	--sysconfdir=%{_sysconfdir} \
 	--mandir=%{_mandir} \
 	--localstatedir="/var"
